#1 document memory parameters